Downgrade to JDK 8