@@ -1,15 +1,24 @@
 package stroom.dashboard.expression.v1;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
 class EncodingUtil {
     static String encodeUrl(final String string) {
-        return URLEncoder.encode(string, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(string, StandardCharsets.UTF_8.name());
+        } catch (final UnsupportedEncodingException ex) {
+            throw new RuntimeException("Unable to find UTF-8 Character encoding", ex);
+        }
     }
 
     static String decodeUrl(final String string) {
-        return URLDecoder.decode(string, StandardCharsets.UTF_8);
+        try {
+            return URLDecoder.decode(string, StandardCharsets.UTF_8.name());
+        } catch (final UnsupportedEncodingException ex) {
+            throw new RuntimeException("Unable to find UTF-8 Character encoding", ex);
+        }
     }
 }
